[gd_scene load_steps=7 format=3 uid="uid://d1fhoosfw8cye"]

[ext_resource type="Script" uid="uid://c08mirq3yalv1" path="res://Scripts/Menus/menu_selecao.gd" id="1_nmwf3"]
[ext_resource type="Texture2D" uid="uid://dkl6w1n0j51lm" path="res://Assets/Interface/Menu/CartazDesmangezados.png" id="3_1yk6f"]
[ext_resource type="PackedScene" uid="uid://cciukv0gmo85j" path="res://Cenas/Menus/SubItems/level_item.tscn" id="3_ijvx7"]
[ext_resource type="Theme" uid="uid://ctk3744ql206m" path="res://Assets/Interface/Fonts/titulo_theme.tres" id="3_utp8p"]
[ext_resource type="Theme" uid="uid://ch2meoilw7dg2" path="res://Assets/Interface/Fonts/subtitulo_theme.tres" id="4_1yk6f"]
[ext_resource type="PackedScene" uid="uid://bk32qrjnda8ni" path="res://Cenas/Menus/SubItems/controles_conectados.tscn" id="4_utp8p"]

[node name="MenuSelecao" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nmwf3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.617928, 0.557354, 1)

[node name="CartazDesmangezados" type="Sprite2D" parent="."]
modulate = Color(0.15, 0.15, 0.15, 1)
position = Vector2(641, 361.5)
scale = Vector2(0.597222, 0.452469)
texture = ExtResource("3_1yk6f")

[node name="LabelTitulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("3_utp8p")
text = "NÃ­veis"

[node name="ControlesConectados" parent="." instance=ExtResource("4_utp8p")]
layout_mode = 1

[node name="ScrollContainerLeveis" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 350)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -175.0
offset_right = -50.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainerLeveis"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
alignment = 1

[node name="LevelItem" parent="ScrollContainerLeveis/HBoxContainer" instance=ExtResource("3_ijvx7")]
visible = false
layout_mode = 2

[node name="ButtonVoltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -77.0
offset_right = 77.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_1yk6f")
text = "Voltar"

[connection signal="pressed" from="ButtonVoltar" to="." method="_on_button_voltar_pressed"]
